fix class name warp to wrap

--- a/src/app/layouts/components/navbar/navbar.component.scss
+++ b/src/app/layouts/components/navbar/navbar.component.scss
@@ -11,7 +11,7 @@ nav {
     width: 100%; 
     z-index: 3; 
 
-    .nav-warp {
+    .nav-wrap {
         display: flex;
         justify-content: space-between;
         align-items: center;
