--- a/src/app/layouts/pages/home/home.component.scss
+++ b/src/app/layouts/pages/home/home.component.scss
@@ -2,7 +2,7 @@ $color1: #265F61;
 $color2: #36858A;
 $color3: #10A37F;
 
-// .header-warp {
+// .header-wrap {
 //     display: flex;
 //     justify-content: center;
 //     align-items: center;
@@ -226,7 +226,7 @@ $color3: #10A37F;
 // ----------------------------------------------------------------------------------
 
 @media (min-width: 1024px) {
-    .header-warp {
+    .header-wrap {
         .personal-info {
             height: 287px;
 
